--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
         <p>Software Development Portfolio</p>
         <p class="view"><a href="https://github.com/euandeas/euandeas.github.io/">View the Project on GitHub</a></p>
         <ul>
-          <li><a href="https://www.linkedin.com/in/euan-deas-6204b3193/">li</a></li>
-          <li><a href="https://github.com/euandeas">gh</a></li>
-          <li><a href="https://www.instagram.com/euandeasdev">ig</a></li>
+          <li><a href="https://www.linkedin.com/in/euan-deas-6204b3193/"><<strong>li</strong></a></li>
+          <li><a href="https://github.com/euandeas"><strong>gh</strong></a></li>
+          <li><a href="https://www.instagram.com/euandeasdev"><strong>ig</strong></a></li>
         </ul>
       </header>
       <section>
