--- a/index.html
+++ b/index.html
@@ -31,15 +31,17 @@
 
         <p>Please make sure to check out my projects and give any feedback! Thankyou!</p>
 
-        <h2>My Languages/h2>
+        <h2>My Languages And Extra Experience</h2>
 
-        <p>In first grade I learned that 5 &gt; 3 and 2 &lt; 7. Maybe some arrows. 1 -&gt; 2 -&gt; 3. 9 &lt;- 8 &lt;- 7.</p>
-
-        <p>Triangles man! a^2 + b^2 = c^2</p>
+        <p>C# and Python, with experience in Xamarin Android</p>
 
         <h2>Projects</h2>
+        
+        <p><Android App> <a href="https://play.google.com/store/apps/details?id=com.euandeas.RowerStuff">RowerStuff</a></p>
 
         <h2>Smaller Works</h2>
+        
+        <p><Mod> <a href="https://desktopgooseunofficial.github.io/ResourceHub/mods/DragGoose.html">DragGoose</a> and <a href="https://desktopgooseunofficial.github.io/ResourceHub/mods/BreadCrumbs.html">BreadCrumbs</a> Mods For Desktop Goose</a></p>
       </section>
       <footer>
         <p>This project is maintained by <a href="https://github.com/euandeas/">Euan Deas</a></p>
