--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
 
         <h2>Projects</h2>
         
-        <p><Android App> <a href="https://play.google.com/store/apps/details?id=com.euandeas.RowerStuff">RowerStuff</a></p>
+        <p>&lt;Android App&gt; <a href="https://play.google.com/store/apps/details?id=com.euandeas.RowerStuff">RowerStuff</a></p>
 
         <h2>Smaller Works</h2>
         
-        <p><Mod> <a href="https://desktopgooseunofficial.github.io/ResourceHub/mods/DragGoose.html">DragGoose</a> and <a href="https://desktopgooseunofficial.github.io/ResourceHub/mods/BreadCrumbs.html">BreadCrumbs</a> Mods For Desktop Goose</a></p>
+        <p>&lt;Mod&gt; <a href="https://desktopgooseunofficial.github.io/ResourceHub/mods/DragGoose.html">DragGoose</a> and <a href="https://desktopgooseunofficial.github.io/ResourceHub/mods/BreadCrumbs.html">BreadCrumbs</a> Mods For Desktop Goose</a></p>
       </section>
       <footer>
         <p>This project is maintained by <a href="https://github.com/euandeas/">Euan Deas</a></p>
