--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
         <p>Software Development Portfolio</p>
         <p class="view"><a href="https://github.com/euandeas/euandeas.github.io/">View the Project on GitHub</a></p>
         <ul>
-          <li><a href="https://www.linkedin.com/in/euan-deas-6204b3193/"><strong>LinkedIn</strong></a></li>
-          <li><a href="https://github.com/euandeas"><strong>GitHub</strong></a></li>
-          <li><a href="https://www.instagram.com/euandeasdev"><strong>Instagram</strong></a></li>
+          <li id="li"><a href="https://www.linkedin.com/in/euan-deas-6204b3193/"><strong>LinkedIn</strong></a></li>
+          <li id="gh"><a href="https://github.com/euandeas"><strong>GitHub</strong></a></li>
+          <li id="ig"><a href="https://www.instagram.com/euandeasdev"><strong>Instagram</strong></a></li>
         </ul>
       </header>
       <section>
