--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
         <h2>Smaller Works</h2>
         
-        <p>&lt;Mod&gt; <a href="https://desktopgooseunofficial.github.io/ResourceHub/mods/DragGoose.html">DragGoose</a> and <a href="https://desktopgooseunofficial.github.io/ResourceHub/mods/BreadCrumbs.html">BreadCrumbs</a> Mods For Desktop Goose</a></p>
+        <p><strong>&lt;Mod&gt;</strong> <a href="https://desktopgooseunofficial.github.io/ResourceHub/mods/DragGoose.html">DragGoose</a> and <a href="https://desktopgooseunofficial.github.io/ResourceHub/mods/BreadCrumbs.html">BreadCrumbs</a> Mods For Desktop Goose</a></p>
       </section>
       <footer>
         <p>This project is maintained by <a href="https://github.com/euandeas/">Euan Deas</a></p>
