--- a/404.html
+++ b/404.html
@@ -12,3 +12,6 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
   </head>
+  <body>
+    <h1>404</h1>
+  </body>
