--- a/404.html
+++ b/404.html
@@ -13,7 +13,7 @@
     <![endif]-->
   </head>
   <body>
-    <div id="404_centre>
+    <div id="404_centre">
       <h1>404</h1>
     <div>
   </body>
