--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <p>Software Development Portfolio</p>
         <p class="view"><a href="https://github.com/euandeas/euandeas.github.io/">View the Project on GitHub</a></p>
         <ul>
+          <li><a href="https://www.linkedin.com/in/euan-deas-6204b3193/"><strong>Email</strong></a></li>
           <li><a href="https://www.linkedin.com/in/euan-deas-6204b3193/"><strong>LinkedIn</strong></a></li>
           <li><a href="https://github.com/euandeas"><strong>GitHub</strong></a></li>
           <li><a href="https://www.instagram.com/euandeasdev"><strong>Instagram</strong></a></li>
