--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
         <h2>Projects</h2>
         
-        <p><strong>&lt;Android App&gt;</strong> <a href="project_RowerSuff.html">RowerStuff</a></p>
+        <p><strong>&lt;Android App&gt;</strong> <a href="/Projects/RowerStuff.html">RowerStuff</a></p>
 
         <h2>Other Work</h2>
         
