--- a/Projects/RowerStuff.html
+++ b/Projects/RowerStuff.html
@@ -26,6 +26,7 @@
       </header>
       <section>
         <h1>Rower Stuff</h1>
+        <p>Coming Soon... Mean while why not search it on google play</p>
 
       </section>
       <footer>
