--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         </ul>
       </header>
       <section>
+        <h1>Home</h1>
         <h2>About Me</h2>
 
         <p>Hello. My name is Euan and I am based in Reading (UK). I am currently studying for my A Levels in computer science, maths and physics, while also developing software and expanding my knowledge on C# and python on the side. I have taught myself programming since around 2016, and would like to get into the software development industry when I am older. Currently I have worked on and released one project, Rower Suff, but I have plans for a few others in the near future. My school has also allowed me to acquire 2 MTA certifications in software development fundamentals and python programming, and in the near future I hope to achieve high grades in my A Levels which will allow me to go to the university of my choice.</p>
