--- a/Projects/RowerStuff.html
+++ b/Projects/RowerStuff.html
@@ -26,7 +26,10 @@
       </header>
       <section>
         <h1>Rower Stuff</h1>
-        <p>Coming Soon... Mean while why not search it on google play</p>
+        <h2>About</h2>
+        <h2>Dev Cycle</h2>
+        <h2>Images</h2>
+        <h2>Get It</h2>
 
       </section>
       <footer>
