--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <div class="wrapper">
-      {% header.html %}
+      {% include header.html %}
       <section>
         <h1>Home</h1>
         <h2>About Me</h2>
