--- a/Projects/RowerStuff.html
+++ b/Projects/RowerStuff.html
@@ -30,6 +30,7 @@
         <h2>Dev Cycle</h2>
         <h2>Images</h2>
         <h2>Get It</h2>
+        <p>The app can be downloaded on android devices from <a href="https://play.google.com/store/apps/details?id=com.euandeas.RowerStuff&hl=en_GB">here</a>.</p>
 
       </section>
       <footer>
