--- a/Projects/RowerStuff.html
+++ b/Projects/RowerStuff.html
@@ -26,6 +26,7 @@
       </header>
       <section>
         <h1>Rower Stuff</h1>
+        <p><small><a href="../">Go To Home</a></small></p>
         <h2>About</h2>
         <p>This is a simple mobile app for android that includes a variety of tools and calculators for rowers and rowing coaches. This app allows quick and easy access to vital calculations that the athletes use to analyse the data from their training. It also keeps all the calculations together whereas before you had to remember multiple different websites for different calculations.</p>
         
