--- a/Projects/RowerStuff.html
+++ b/Projects/RowerStuff.html
@@ -15,7 +15,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <div><h1>Euan Deas</h1><p>EST. 2003</p></div>
+        <h1>Euan Deas</h1>
         <p>Software Development Portfolio</p>
         <ul>
           <li><a href="mailto:euandeasapps@gmail.com"><strong>Email</strong></a></li>
