--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
         <h2>Projects</h2>
         
-        <p><strong>&lt;Android App&gt;</strong> <a href="/projects/rowerstuff.html">RowerStuff</a></p>
+        <p><strong>&lt;Android App&gt;</strong> <a href="/projects/rowerstuff">RowerStuff</a></p>
 
         <h2>Other Work</h2>
         
