--- a/projects/rowerstuff.html
+++ b/projects/rowerstuff.html
@@ -4,7 +4,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>Euan Deas - Rower Stuff</title>
-
+	  
+    <link rel="icon" href="../Assets/logo.png">
     <link rel="stylesheet" href="../stylesheets/styles.css">
     <link rel="stylesheet" href="../stylesheets/pygment_trac.css">
     <link rel="stylesheet" href="../stylesheets/flickity.css" media="screen">
