--- a/projects/rowerstuff.html
+++ b/projects/rowerstuff.html
@@ -49,8 +49,8 @@
 		<div class="carousel-cell"><img src="../Assets/RowerStuff/percentage.png" alt="" /></div>
 	</div>
         
-        <h2>Get It</h2>
-        <p>The app can be downloaded on android devices from <a href="https://play.google.com/store/apps/details?id=com.euandeas.RowerStuff&hl=en_GB">here</a>.</p>
+        <h2>Try It Today!</h2>
+        <a href='https://play.google.com/store/apps/details?id=com.euandeas.RowerStuff&hl=en&pcampaignid=pcampaignidMKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'><img alt='Get it on Google Play' src='https://play.google.com/intl/en_gb/badges/static/images/badges/en_badge_web_generic.png'/></a>
 
       </section>
       <footer>
