--- a/projects/rowerstuff.html
+++ b/projects/rowerstuff.html
@@ -5,6 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>Euan Deas - Rower Stuff</title>
 	  
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-159565339-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-159565339-1');
+    </script>
+
+	  
     <link rel="icon" href="../Assets/logo.png">
     <link rel="stylesheet" href="../stylesheets/styles.css">
     <link rel="stylesheet" href="../stylesheets/pygment_trac.css">
