--- a/redirects/rs_storepage.html
+++ b/redirects/rs_storepage.html
@@ -1,1 +1,11 @@
 <meta http-equiv="refresh" content="0; URL='https://play.google.com/store/apps/details?id=com.euandeas.RowerStuff&hl=en'" />
+
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-159565339-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-159565339-1');
+</script>
