--- a/projects/rowerstuff.html
+++ b/projects/rowerstuff.html
@@ -58,6 +58,7 @@
 		<div class="carousel-cell"><img src="../Assets/RowerStuff/vo.png" alt="" /></div>
 		<div class="carousel-cell"><img src="../Assets/RowerStuff/rate.png" alt="" /></div>
 		<div class="carousel-cell"><img src="../Assets/RowerStuff/percentage.png" alt="" /></div>
+		<div class="carousel-cell"><img src="../Assets/RowerStuff/steadystate.png" alt="" /></div>
 	</div>
         
         <h2>Try It Today!</h2>
