--- a/projects/rowerstuff.html
+++ b/projects/rowerstuff.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Euan Deas - Rower Stuff</title>
+    <title>Euan Deas | Rower Stuff</title>
 	  
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-159565339-1"></script>
