--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@
         <h2>Projects</h2>
         
         <p><strong>&lt;Android App&gt;</strong> <a href="/projects/rowerstuff">RowerStuff</a></p>
+        
+        <p><strong>More Coming Soon!</strong></p>
       </section>
       <footer>
         <p>This project is maintained by <a href="https://github.com/euandeas/">Euan Deas</a></p>
