--- a/projects/rowerstuff.html
+++ b/projects/rowerstuff.html
@@ -50,10 +50,8 @@
         <p>This app was built using C# and Xamarin.Android<p>
         
         <h2>Images</h2>
-	<p><small>Refresh if images don't load.</small></p>
         <div class="carousel js-flickity" data-flickity-options='{ "wrapAround": true }'>
-		<p><small>Refresh if images don't load.</small></p>
-  		<div class="carousel-cell"><img src="../Assets/RowerStuff/pace.png" alt="" /></div>
+  		<div class="carousel-cell"><img src="../Assets/RowerStuff/pace.png" alt="" /><p><small>Refresh if images don't load.</small></p></div>
   		<div class="carousel-cell"><img src="../Assets/RowerStuff/watts.png" alt="" /></div>
   		<div class="carousel-cell"><img src="../Assets/RowerStuff/weight.png" alt="" /></div>
 		<div class="carousel-cell"><img src="../Assets/RowerStuff/pred.png" alt="" /></div>
