--- a/projects/rowerstuff.html
+++ b/projects/rowerstuff.html
@@ -51,7 +51,7 @@
         
         <h2>Images</h2>
         <div class="carousel js-flickity" data-flickity-options='{ "wrapAround": true }'>
-  		<div class="carousel-cell"><img src="../Assets/RowerStuff/pace.png" alt="" /><p><small>Refresh if images don't load.</small></p></div>
+  		<div class="carousel-cell"><img src="../Assets/RowerStuff/pace.png" alt="" /></div>
   		<div class="carousel-cell"><img src="../Assets/RowerStuff/watts.png" alt="" /></div>
   		<div class="carousel-cell"><img src="../Assets/RowerStuff/weight.png" alt="" /></div>
 		<div class="carousel-cell"><img src="../Assets/RowerStuff/pred.png" alt="" /></div>
