Update and rename blog to blog.html

--- a/blog.html
+++ b/blog.html
@@ -40,7 +40,7 @@
       <section>
         <h1>Blog Posts</h1>
         <p><small><a href="../">Go To Home</a></small></p>
-        <h2>About</h2>
+        <p><strong>&lt;Jan 01, 2020&gt;</strong> <a href="/projects/rowerstuff">Oops, how did you get here?</a></p>
       </section>
       <footer>
         <p>This project is maintained by <a href="https://github.com/euandeas/">Euan Deas</a></p>
@@ -48,6 +48,5 @@
       </footer>
     </div>
     <script src="../javascripts/scale.fix.js"></script>
-    <script src="../javascripts/flickity.pkgd.min.js"></script>
   </body>
 </html>
