--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>Euan Deas | Software Dev. Portfolio</title>
-    <meta name=”Description” content=”My software development portfolio showcasing my projects and work. Student based in Reading (UK).”>
+    <meta name=”description” content=”My software development portfolio showcasing my projects and skills. Student based in Reading (UK).”>
     
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-159565339-1"></script>
