--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
         <h2>Projects</h2>
         
         <p><strong>&lt;Android App&gt;</strong> <a href="/projects/rowerstuff">RowerStuff</a></p>
+        <p><strong>&lt;Android App&gt;</strong> <a href="">RowerStuff</a></p>
         
         <p><strong>More Coming Soon!</strong></p>
       </section>
