--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
 
         <h2>Projects</h2>
         
-        <p><strong>&lt;Android App&gt;</strong> <a href="/projects/rowerstuff">RowerStuff</a></p>
-        <p><strong>&lt;Android App&gt;</strong> <a href="">RowerStuff</a></p>
+        <p><strong>&lt;Android App&gt;</strong> <a href="/projects/rowerstuff">Rower Stuff</a></p>
+        <p><strong>&lt;Android App&gt;</strong> <a href="">Club Clays</a></p>
         
         <p><strong>More Coming Soon!</strong></p>
       </section>
