--- a/redirects/rs_storepage.html
+++ b/redirects/rs_storepage.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html>
   <head>
-    <meta http-equiv="refresh" content="0; URL='https://play.google.com/store/apps/details?id=com.euandeas.RowerStuff&hl=en'" />
+    <meta http-equiv="refresh" content="0; URL='https://play.google.com/store/apps/details?id=com.euandeas.RowerStuff'" />
   </head>
 </html>
