--- a/projects/rowerstuff.html
+++ b/projects/rowerstuff.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>Euan Deas | Rower Stuff</title>
 	  
-    <link rel="icon" href="../Assets/logo.png">
+    <link rel="icon" href="../assets/logo.png">
     <link rel="stylesheet" href="../stylesheets/styles.css">
     <link rel="stylesheet" href="../stylesheets/pygment_trac.css">
     <link rel="stylesheet" href="../stylesheets/flickity.css" media="screen">
@@ -40,27 +40,25 @@
         
         <h2>Images</h2>
         <div class="carousel js-flickity" data-flickity-options='{ "wrapAround": true }'>
-  		<div class="carousel-cell"><img src="../Assets/RowerStuff/pace.png" alt="" /></div>
-  		<div class="carousel-cell"><img src="../Assets/RowerStuff/watts.png" alt="" /></div>
-  		<div class="carousel-cell"><img src="../Assets/RowerStuff/weight.png" alt="" /></div>
-		<div class="carousel-cell"><img src="../Assets/RowerStuff/pred.png" alt="" /></div>
-		<div class="carousel-cell"><img src="../Assets/RowerStuff/vo.png" alt="" /></div>
-		<div class="carousel-cell"><img src="../Assets/RowerStuff/rate.png" alt="" /></div>
-		<div class="carousel-cell"><img src="../Assets/RowerStuff/percentage.png" alt="" /></div>
-		<div class="carousel-cell"><img src="../Assets/RowerStuff/steadystate.png" alt="" /></div>
-	</div>
-	<p><small>Refresh if images don't load.</small></p>
+  		    <div class="carousel-cell"><img src="../assets/RowerStuff/pace.png" alt="" /></div>
+  		    <div class="carousel-cell"><img src="../assets/RowerStuff/watts.png" alt="" /></div>
+  		   <div class="carousel-cell"><img src="../assets/RowerStuff/weight.png" alt="" /></div>
+		      <div class="carousel-cell"><img src="../assets/RowerStuff/pred.png" alt="" /></div>
+		     <div class="carousel-cell"><img src="../assets/RowerStuff/vo.png" alt="" /></div>
+		      <div class="carousel-cell"><img src="../assets/RowerStuff/rate.png" alt="" /></div>
+		      <div class="carousel-cell"><img src="../assets/RowerStuff/percentage.png" alt="" /></div>
+		      <div class="carousel-cell"><img src="../assets/RowerStuff/steadystate.png" alt="" /></div>
+	      </div>
         
         <h2>Try It Today!</h2>
         <a href='https://play.google.com/store/apps/details?id=com.euandeas.RowerStuff&hl=en&pcampaignid=pcampaignidMKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'><img alt='Get it on Google Play' src='https://play.google.com/intl/en_gb/badges/static/images/badges/en_badge_web_generic.png'/></a>
-
       </section>
       <footer>
         <p>This project is maintained by <a href="https://github.com/euandeas/">Euan Deas</a></p>
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
     </div>
-    <script src="../javascripts/scale.fix.js"></script>
-    <script src="../javascripts/flickity.pkgd.min.js"></script>
+    <script src="../scripts/scale.fix.js"></script>
+    <script src="../scripts/flickity.pkgd.min.js"></script>
   </body>
 </html>
