--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>Euan Deas | Software Dev. Portfolio</title>
     <meta name=”description” content=”My software development portfolio showcasing my projects and skills. Student based in Reading (UK).”>
-    <link rel="icon" href="Assets/logo.png">
+    <link rel="icon" href="assets/logo.png">
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
     <meta name="viewport" content="width=device-width">
@@ -50,6 +50,6 @@
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
     </div>
-    <script src="javascripts/scale.fix.js"></script>
+    <script src="scripts/scale.fix.js"></script>
   </body>
 </html>
