--- a/projects/clubclays.html
+++ b/projects/clubclays.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>Euan Deas | Rower Stuff</title>
 	  
-    <link rel="icon" href="../Assets/logo.png">
+    <link rel="icon" href="../assets/logo.png">
     <link rel="stylesheet" href="../stylesheets/styles.css">
     <link rel="stylesheet" href="../stylesheets/pygment_trac.css">
     <link rel="stylesheet" href="../stylesheets/flickity.css" media="screen">
@@ -52,7 +52,7 @@
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
     </div>
-    <script src="../javascripts/scale.fix.js"></script>
-    <script src="../javascripts/flickity.pkgd.min.js"></script>
+    <script src="../scripts/scale.fix.js"></script>
+    <script src="../scripts/flickity.pkgd.min.js"></script>
   </body>
 </html>
