--- a/template.html
+++ b/template.html
@@ -15,6 +15,7 @@
     <header class="header">
       <nav class="header-inner">
         <div class="header-shadow"></div>
+        <a class="header-nav-item" href="/">EUAN DEAS.</a>
       </nav>
     </header>
 
