started implementation of themes

--- a/template.html
+++ b/template.html
@@ -16,6 +16,9 @@
       <nav class="header-inner">
         <div class="header-shadow"></div>
         <a class="header-nav-item" href="/">EUAN DEAS.</a>
+        <a class="header-nav-item" href="/">Projects</a>
+        <a class="header-nav-item" href="/">Posts</a>
+        <button class="btn-toggle">Test</button>
       </nav>
     </header>
 
@@ -35,4 +38,5 @@
 
     </footer>
   </body>
+  <script src="scripts/theme.js"></script> 
 </html>
