--- a/template.html
+++ b/template.html
@@ -15,27 +15,40 @@
     <header class="header">
       <nav class="header-inner">
         <div class="header-shadow"></div>
-        <a class="header-nav-item" href="/">EUAN DEAS.</a>
-        <a class="header-nav-item" href="/">Projects</a>
-        <a class="header-nav-item" href="/">Posts</a>
-        <button class="btn-toggle">Test</button>
+        <a class="header-nav-item" href="/"><p style="font-weight: bold; font-size: 25px;">EUAN DEAS.</p></a>
+        <a class="header-nav-item" href="/projects.html">Projects</a>
+        <a class="header-nav-item" href="/posts.html">Posts</a>
+        <div class="header-nav-item btn-toggle" style="display: flex; align-items: center; margin-left: auto;">
+          <img class="theme-icon" src="assets/sun.svg" style="margin: 0 auto; display: block; height: 20px; width:20px;" alt="theme"/>
+        </div>
       </nav>
     </header>
 
     <div class="grid-container">
-      <div class="grid-50">
+      <div class="grid-50 mobile-grid-50">
         I am 50% wide.
       </div>
-      <div class="grid-25">
+      <div class="grid-25 mobile-grid-50">
         I am 25% wide.
       </div>
-      <div class="grid-25">
+      <div class="grid-25 mobile-grid-50">
         I am 25% wide.
       </div>
     </div>
 
-    <footer>
-
+    <footer class="footer">
+      <div class="footer-inner">
+        <a class="footer-item" href="mailto:euandeasapps@gmail.com">Contact</a>
+        <div class="footer-item" style="display: flex; align-items: center; margin-left: auto;">
+          <img class="social-icon" src="assets/linkedin.svg" style="margin: 0 auto; display: block; height: 20px; width:20px; padding-right: 20px;" alt="theme"/>
+          <img class="social-icon" src="assets/instagram.svg" style="margin: 0 auto; display: block; height: 20px; width:20px; padding-right: 20px;" alt="theme"/>
+          <img class="social-icon" src="assets/github.svg" style="margin: 0 auto; display: block; height: 20px; width:20px;" alt="theme"/>
+        </div>
+        <! –– Contact, Copyright, github, linkedin, instagram ––>
+      </div>
+      <div class="footer-inner" style="height: 20px; margin-bottom: 20px;">
+        <p class="footer-item" style="margin-left: auto; margin-right:auto; height: 20px; line-height: 20px; font-size: 12px; color: var(--text-color);">© 2022 Euan Deas. All Rights Reserved.</p>
+      </div>
     </footer>
   </body>
   <script src="scripts/theme.js"></script> 
