--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="wrapper">
       <header>
         <h1>Euan Deas</h1>
-        <p>Software Development Portfolio</p>
+        <p>(New Site Coming Soon!) Software Development Portfolio</p>
         <ul>
           <li><a href="mailto:euandeasapps@gmail.com"><strong>Email</strong></a></li>
           <li><a href="https://www.linkedin.com/in/euan-deas-6204b3193/"><strong>LinkedIn</strong></a></li>
