--- a/template.html
+++ b/template.html
@@ -40,11 +40,10 @@
       <div class="footer-inner">
         <a class="footer-item" href="mailto:euandeasapps@gmail.com">Contact</a>
         <div class="footer-item" style="display: flex; align-items: center; margin-left: auto;">
-          <img class="social-icon" src="assets/linkedin.svg" style="margin: 0 auto; display: block; height: 20px; width:20px; padding-right: 20px;" alt="theme"/>
-          <img class="social-icon" src="assets/instagram.svg" style="margin: 0 auto; display: block; height: 20px; width:20px; padding-right: 20px;" alt="theme"/>
-          <img class="social-icon" src="assets/github.svg" style="margin: 0 auto; display: block; height: 20px; width:20px;" alt="theme"/>
+          <a href="https://www.linkedin.com/in/euan-deas-6204b3193/"><img id="linkedinicon" src="assets/linkedin.svg" style="margin: 0 auto; display: block; height: 20px; width:20px; padding-right: 20px;" alt="linkedin"/></a>
+          <a href="https://www.instagram.com/euandeas_dev"><img id="instaicon" src="assets/instagram.svg" style="margin: 0 auto; display: block; height: 20px; width:20px; padding-right: 20px;" alt="instagram"/></a>
+          <a href="https://github.com/euandeas"><img id="githubicon" src="assets/github.svg" style="margin: 0 auto; display: block; height: 20px; width:20px;" alt="github"/></a>
         </div>
-        <! –– Contact, Copyright, github, linkedin, instagram ––>
       </div>
       <div class="footer-inner" style="height: 20px; margin-bottom: 20px;">
         <p class="footer-item" style="margin-left: auto; margin-right:auto; height: 20px; line-height: 20px; font-size: 12px; color: var(--text-color);">© 2022 Euan Deas. All Rights Reserved.</p>
