--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <title>Euan Deas | Software Dev. Portfolio</title>
     
     <link rel="icon" href="assets/logo.png">
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/unsemantic-grid-responsive-no-ie7.css">
+    <link rel="stylesheet" type="text/css" href="stylesheets/styles.css">
+    <link rel="stylesheet"  type="text/css" href="stylesheets/unsemantic-grid-responsive-no-ie7.css">
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1"/>
@@ -15,8 +15,8 @@
       <nav class="header-inner">
         <div class="header-shadow"></div>
         <a class="header-nav-item" href="/"><p style="font-weight: bold; font-size: 25px;">EUAN DEAS.</p></a>
-        <a class="header-nav-item" href="/projects.html">Projects</a>
-        <a class="header-nav-item" href="/posts.html">Posts</a>
+        <a class="header-nav-item" href="projects.html">Projects</a>
+        <a class="header-nav-item" href="posts.html">Posts</a>
         <div class="header-nav-item btn-toggle" style="display: flex; align-items: center; margin-left: auto;">
           <img class="theme-icon" src="assets/sun.svg" style="margin: 0 auto; display: block; height: 20px; width:20px;" alt="theme"/>
         </div>
