--- a/404.html
+++ b/404.html
@@ -25,8 +25,7 @@
     </header>
 
     <div class="grid-container">
-        <div class="grid-100 mobile-grid-100" style="padding-top: 100px;"></div>
-        <div class="grid-100 mobile-grid-100" style="padding-top: 100px;"></div>
+        <div class="grid-100 mobile-grid-100" style="padding-top: 25vh;"></div>
         <h1 class="grid-50 prefix-25 suffix-25 mobile-prefix-10 mobile-suffix-10 mobile-grid-80" style="font-size: 36px; padding-bottom: 5px;">404 - Page Not Found</h1>
         <p class="grid-50 prefix-25 suffix-25 mobile-prefix-10 mobile-suffix-10 mobile-grid-80" style="font-size: 16px; padding-bottom: 5px;">The page you're looking for was not found.</p>
         <hr class="grid-50 prefix-25 suffix-25 mobile-prefix-10 mobile-suffix-10 mobile-grid-80" aria-orientation="horizontal" style="border-bottom-width: 1px; margin-top: 10px; margin-bottom: 10px; border-style: solid; opacity: 0.6;"> 
