--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
     </header>
 
     <div class="grid-container">
-        <div class="grid-100 mobile-grid-100" style="padding-top: 100px;"></div>
-        <div class="grid-100 mobile-grid-100" style="padding-top: 100px;"></div>
+        <div class="grid-100 mobile-grid-100" style="padding-top: 25vh;"></div>
         <h1 class="grid-50 prefix-25 suffix-25 mobile-prefix-10 mobile-suffix-10 mobile-grid-80" style="font-size: 36px; padding-bottom: 5px;">New Site Coming Soon!</h1>
         <p class="grid-50 prefix-25 suffix-25 mobile-prefix-10 mobile-suffix-10 mobile-grid-80" style="font-size: 16px; padding-bottom: 5px;">This site is still in development, but it should hopefully be up and running soon!</p>
     </div>
