added meta description

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Euan Deas | Software Dev. Portfolio</title>
+    <meta name="description" content="The software devlopment portfolio site for Euan Deas a Computer Science Msci student, based in Nottingham & Reading, UK."/>
     
     <link rel="icon" href="assets/logo.png">
     <link rel="stylesheet" type="text/css" href="stylesheets/styles.css">
