--- a/404.html
+++ b/404.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Euan Deas | Software Dev. Portfolio</title>
-    <meta name="description" content="The software devlopment portfolio site for Euan Deas a Computer Science Msci student, based in Nottingham & Reading, UK."/>
+    <meta name="description" content="The software development portfolio site for Euan Deas a Computer Science Msci student, based in Nottingham & Reading, UK."/>
     
     <link rel="icon" href="assets/logo.png">
     <link rel="stylesheet" href="stylesheets/styles.css">
