Added content to home page

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header class="header">
       <nav class="header-inner">
         <div class="header-shadow"></div>
-        <a class="header-nav-item" href="/"><p style="font-weight: bold; font-size: 25px;">EUAN DEAS.</p></a>
+        <a class="header-nav-item" href="/"><p style="font-weight: bold; font-size: 25px;">ED.</p></a>
         <a class="header-nav-item" href="projects.html">Projects</a>
         <a class="header-nav-item" href="posts.html">Posts</a>
         <div class="header-nav-item btn-toggle" style="display: flex; align-items: center; margin-left: auto;">
@@ -25,9 +25,39 @@
     </header>
 
     <div class="grid-container">
-        <div class="grid-100 mobile-grid-100" style="padding-top: 25vh;"></div>
-        <h1 class="grid-50 prefix-25 suffix-25 mobile-prefix-10 mobile-suffix-10 mobile-grid-80" style="font-size: 36px; padding-bottom: 5px;">New Site Coming Soon!</h1>
-        <p class="grid-50 prefix-25 suffix-25 mobile-prefix-10 mobile-suffix-10 mobile-grid-80" style="font-size: 16px; padding-bottom: 5px;">This site is still in development, but it should hopefully be up and running soon!</p>
+      <h1 class="grid-80 mobile-grid-80" style="font-size: 36px; padding-bottom: 5px;">Euan Deas</h1>
+      <p class="grid-100 mobile-grid-100" style="font-size: 16px; padding-bottom: 5px; margin-bottom: 30px;">Student Software Developer</p>
+
+        <h3 class="grid-100 mobile-grid-100 content-heading" >About</h3>
+
+        <p class="grid-100 mobile-grid-100" style="font-size: 16px;margin-bottom: 40px;">Euan is a Computer Science Msci student at the University of Nottingham, based in both Nottingham and Reading (UK), who has a passion for software development and new developing technologies. This website is used to show his development and experiences as he moves from the world of education to work. He has self-taught himself programming since 2016 and continued to develop further on this in his education since.</p>
+        
+        <h3 class="grid-100 mobile-grid-100 content-heading" >Languages & Tools</h3>
+        <div class="grid-100 mobile-grid-100" style="display: inline-block; margin-bottom: 30px;">
+          <p class="language-bubble" style="font-size: 16px;">C#</p>
+          <p class="language-bubble" style="font-size: 16px;">Python</p>
+          <p class="language-bubble" style="font-size: 16px;">Xamarin Android</p>
+          <p class="language-bubble" style="font-size: 16px;">SQL</p>
+          <p class="language-bubble" style="font-size: 16px;">C</p>
+          <p class="language-bubble" style="font-size: 16px;">Java</p>
+          <p class="language-bubble" style="font-size: 16px;">Haskell</p>
+          <p class="language-bubble" style="font-size: 16px;">Git</p>
+        </div>
+        
+        <h3 class="grid-100 mobile-grid-100 content-heading" >Bio</h3>
+        <p class="grid-5 suffix-5 mobile-grid-15" style="font-size: 16px; padding-bottom: 10px; font-weight: bold;">2003</p>
+        <p class="grid-90 mobile-grid-85" style="font-size: 16px; padding-bottom: 10px; ">Born in the UK.</p>
+        <p class="grid-5 suffix-5 mobile-grid-15" style="font-size: 16px; padding-bottom: 10px; font-weight: bold;">2018</p>
+        <p class="grid-90 mobile-grid-85" style="font-size: 16px; padding-bottom: 10px;">Launch of my first program "Rower Stuff" on Android.</p>
+        <p class="grid-5 suffix-5 mobile-grid-15" style="font-size: 16px; padding-bottom: 10px; font-weight: bold;">2019</p>
+        <p class="grid-90 mobile-grid-85" style="font-size: 16px; padding-bottom: 10px;">Completed GCSEs.</p>
+        <p class="grid-5 suffix-5 mobile-grid-15" style="font-size: 16px; padding-bottom: 10px; font-weight: bold;">2021</p>
+        <p class="grid-90 mobile-grid-85" style="font-size: 16px; padding-bottom: 10px;">Completed GCE Advanced Level.</p>
+        <p class="grid-5 suffix-5 mobile-grid-15" style="font-size: 16px; padding-bottom: 10px; font-weight: bold;">2021</p>
+        <p class="grid-90 mobile-grid-85" style="font-size: 16px; padding-bottom: 10px;">Launch of second program "Club Clays" on Android.</p>
+        <p class="grid-5 suffix-5 mobile-grid-15" style="font-size: 16px; padding-bottom: 10px; font-weight: bold;">2021</p>
+        <p class="grid-90 mobile-grid-85" style="font-size: 16px; padding-bottom: 10px;">Started Computer Science Msci at the University of Nottingham.</p>
+
     </div>
  
 
