--- a/posts.html
+++ b/posts.html
@@ -26,6 +26,9 @@
     </header>
 
     <div class="grid-container">
+      <div class="grid-100 mobile-grid-100" style="padding-top: 25vh;"></div>
+      <h1 class="grid-50 prefix-25 suffix-25 mobile-prefix-10 mobile-suffix-10 mobile-grid-80" style="font-size: 36px; padding-bottom: 5px;">No Posts.</h1>
+      <p class="grid-50 prefix-25 suffix-25 mobile-prefix-10 mobile-suffix-10 mobile-grid-80" style="font-size: 16px; padding-bottom: 5px;">Come back soon to see any posts that I have written on a variety of topics.</p>
     </div>
 
     <footer class="footer">
