--- a/projects.html
+++ b/projects.html
@@ -26,6 +26,9 @@
     </header>
 
     <div class="grid-container">
+      <div class="grid-100 mobile-grid-100" style="padding-top: 25vh;"></div>
+      <h1 class="grid-50 prefix-25 suffix-25 mobile-prefix-10 mobile-suffix-10 mobile-grid-80" style="font-size: 36px; padding-bottom: 5px;">Projects being added soon!</h1>
+      <p class="grid-50 prefix-25 suffix-25 mobile-prefix-10 mobile-suffix-10 mobile-grid-80" style="font-size: 16px; padding-bottom: 5px;">This page is still in development, but it should hopefully be up and running soon!</p>
     </div>
 
     <footer class="footer">
