--- a/posts.html
+++ b/posts.html
@@ -16,7 +16,7 @@
     <header class="header">
       <nav class="header-inner">
         <div class="header-shadow"></div>
-        <a class="header-nav-item" href="/"><p style="font-weight: bold; font-size: 25px;">EUAN DEAS.</p></a>
+        <a class="header-nav-item" href="/"><p style="font-weight: bold; font-size: 25px;">ED.</p></a>
         <a class="header-nav-item" href="/projects.html">Projects</a>
         <a class="header-nav-item" href="/posts.html">Posts</a>
         <div class="header-nav-item btn-toggle" style="display: flex; align-items: center; margin-left: auto;">
