--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
       <nav class="header-inner">
         <div class="header-shadow"></div>
         <a class="header-nav-item" href="/"><p style="font-weight: bold; font-size: 25px;">ED.</p></a>
-        <a class="header-nav-item" href="projects.html">Projects</a>
-        <a class="header-nav-item" href="posts.html">Posts</a>
+        <a class="header-nav-item" href="projects">Projects</a>
+        <a class="header-nav-item" href="posts">Posts</a>
         <div class="header-nav-item btn-toggle" style="display: flex; align-items: center; margin-left: auto;">
           <img class="theme-icon" src="assets/sun.svg" style="margin: 0 auto; display: block; height: 20px; width:20px;" alt="theme"/>
         </div>
