redesigned project pages

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       </nav>
     </header>
 
-    <div class="grid-container">
+    <div class="grid-container" style="margin-bottom: 30px;">
       <h1 class="grid-80 mobile-grid-80" style="font-size: 36px; padding-bottom: 5px;">Euan Deas</h1>
       <p class="grid-100 mobile-grid-100" style="font-size: 16px; padding-bottom: 5px; margin-bottom: 30px;">Student Software Developer</p>
 
