--- a/template.html
+++ b/template.html
@@ -25,7 +25,7 @@
       </nav>
     </header>
 
-    <div class="grid-container">
+    <div class="grid-container" style="margin-bottom: 30px;">
       <div class="grid-50 mobile-grid-50">
         I am 50% wide.
       </div>
