IMplemented project page

--- a/projects/index.html
+++ b/projects/index.html
@@ -26,9 +26,23 @@
     </header>
 
     <div class="grid-container">
-      <div class="grid-100 mobile-grid-100" style="padding-top: 25vh;"></div>
-      <h1 class="grid-50 prefix-25 suffix-25 mobile-prefix-10 mobile-suffix-10 mobile-grid-80" style="font-size: 36px; padding-bottom: 5px;">Projects being added soon!</h1>
-      <p class="grid-50 prefix-25 suffix-25 mobile-prefix-10 mobile-suffix-10 mobile-grid-80" style="font-size: 16px; padding-bottom: 5px;">This page is still in development, but it should hopefully be up and running soon!</p>
+      <div class="grid-50 mobile-grid-50">
+        <a class="project-card" style="font-size: 36px;" href="/projects/rowerstuff.html">
+          <img src="../assets/RowerStuff/feature.png"></img>
+          <div>
+            <h3 class="content-heading" style="text-decoration:none;">Rower Stuff</h3>
+          </div>
+        </a>
+      </div>
+
+      <div class="grid-50 mobile-grid-50">
+        <a class="project-card" style="font-size: 36px;" href="/projects/clubclays.html">
+          <img src="../assets/ClubClays/feature.png"></img>
+          <div>
+            <h3 class="content-heading" style="text-decoration:none;">Club Clays</h3>
+          </div>
+        </a>
+      </div>
     </div>
 
     <footer class="footer">
