--- a/projects/index.html
+++ b/projects/index.html
@@ -19,7 +19,7 @@
         <a class="header-nav-item" href="/"><p style="font-weight: bold; font-size: 25px;">ED.</p></a>
         <a class="header-nav-item" style="height:53px; border-bottom: 2px solid #52799e" href="../projects">Projects</a>
         <a class="header-nav-item" href="../posts">Posts</a>
-        <div class="header-nav-item btn-toggle" style="display: flex; align-items: center; margin-left: auto;">
+        <div class="header-nav-item btn-toggle" style="margin-left: auto;">
           <img class="theme-icon" src="../assets/sun.svg" style="margin: 0 auto; display: block; height: 20px; width:20px;" alt="theme"/>
         </div>
       </nav>
@@ -48,7 +48,7 @@
     <footer class="footer">
       <div class="footer-inner">
         <a class="footer-item" href="mailto:euandeasapps@gmail.com">Contact</a>
-        <div class="footer-item" style="display: flex; align-items: center; margin-left: auto;">
+        <div class="footer-item" style="margin-left: auto;">
           <a href="https://www.linkedin.com/in/euan-deas-6204b3193/"><img id="linkedinicon" src="../assets/linkedin.svg" style="margin: 0 auto; display: block; height: 20px; width:20px; padding-right: 20px;" alt="linkedin"/></a>
           <a href="https://www.instagram.com/euandeas_dev"><img id="instaicon" src="../assets/instagram.svg" style="margin: 0 auto; display: block; height: 20px; width:20px; padding-right: 20px;" alt="instagram"/></a>
           <a href="https://github.com/euandeas"><img id="githubicon" src="../assets/github.svg" style="margin: 0 auto; display: block; height: 20px; width:20px;" alt="github"/></a>
