--- a/projects/index.html
+++ b/projects/index.html
@@ -55,7 +55,7 @@
         </div>
       </div>
       <div class="footer-inner" style="height: 20px; margin-bottom: 20px;">
-        <p class="footer-item" style="margin-left: auto; margin-right:auto; height: 20px; line-height: 20px; font-size: 12px; color: var(--text-color);">© 2022 Euan Deas. All Rights Reserved.</p>
+        <p class="footer-item" style="margin-left: auto; margin-right:auto; height: 20px; line-height: 20px; font-size: 12px;">© 2022 Euan Deas. All Rights Reserved.</p>
       </div>
     </footer>
   </body>
