--- a/projects/rowerstuff.html
+++ b/projects/rowerstuff.html
@@ -48,7 +48,7 @@
         <p class="grid-100 mobile-grid-100" style="font-size: 16px;margin-bottom: 40px;">- Dark mode</p>
 
         <h3 class="grid-100 mobile-grid-100 content-heading" >Dev Cycle</h3>
-        <p class="grid-100 mobile-grid-100" style="font-size: 16px;margin-bottom: 40px;">This app began in 2018, were I started work on and off work on a simple version of the app with only 3 features. I then had to take a break for a while due to exams, but then started the version 2 redesign in the summer of 2019. The version 2 redesign made the app much easier to navigate, look better and also added new features. I have then gradually been adding new features and fixing small bugs since the release. It now has 7 important tools and a host of quality of life features like easy data copying and clearing.</p>
+        <p class="grid-100 mobile-grid-100" style="font-size: 16px;margin-bottom: 40px;">This app began development in 2018, were work was done on and off on a simple version of the app with only 3 features. I then took a break due to exams, but then started the version 2 redesign in the summer of 2019. The version 2 redesign made the app much easier to navigate, look better and also added new features. I have then gradually been adding new features and fixing small bugs since the release. It now has 7 important tools and a host of quality of life features like easy data copying and clearing.</p>
         
         <h3 class="grid-100 mobile-grid-100 content-heading" >Languages & Tools Used</h3>
         <div class="grid-100 mobile-grid-100" style="display: inline-block; margin-bottom: 30px;">
