--- a/projects/index.html
+++ b/projects/index.html
@@ -27,7 +27,7 @@
 
     <div class="grid-container">
       <div class="grid-50 mobile-grid-50">
-        <a class="project-card" style="font-size: 36px;" href="/projects/rowerstuff.html">
+        <a class="project-card" style="font-size: 36px;" href="/projects/rowerstuff">
           <img src="../assets/RowerStuff/feature.png"></img>
           <div>
             <h3 class="content-heading" style="text-decoration:none;">Rower Stuff</h3>
@@ -36,7 +36,7 @@
       </div>
 
       <div class="grid-50 mobile-grid-50">
-        <a class="project-card" style="font-size: 36px;" href="/projects/clubclays.html">
+        <a class="project-card" style="font-size: 36px;" href="/projects/clubclays">
           <img src="../assets/ClubClays/feature.png"></img>
           <div>
             <h3 class="content-heading" style="text-decoration:none;">Club Clays</h3>
