Added lang attribute

--- a/r/ClubClays.html
+++ b/r/ClubClays.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html lang="en-GB">
   <head>
     <meta http-equiv="refresh" content="0; URL='https://play.google.com/store/apps/details?id=com.euandeas.ClubClays'" />
   </head>
