--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-GB">
   <head>
     <title>Euan Deas | Software Dev. Portfolio</title>
     <meta name="description" content="The software development portfolio site for Euan Deas a Computer Science Msci student, based in Nottingham & Reading, UK."/>
