--- a/posts.html
+++ b/posts.html
@@ -1,7 +1,7 @@
 ---
 ---
 <!DOCTYPE html>
-<html>
+<html lang="en-GB">
   <head>
     <title>Euan Deas | Software Dev. Portfolio</title>
     <meta name="description" content="The software development portfolio site for Euan Deas a Computer Science Msci student, based in Nottingham & Reading, UK."/>
