--- a/privacy.html
+++ b/privacy.html
@@ -1,1 +1,50 @@
+<!DOCTYPE html>
+<html lang="en-GB">
+  <head>
+    <title>Euan Deas | Software Dev. Portfolio</title>
+    <meta name="description" content="The software development portfolio site for Euan Deas a Computer Science Msci student, based in Nottingham & Reading, UK."/>
+    
+    <link rel="icon" href="/assets/logo.png">
+    <link rel="stylesheet" href="/stylesheets/styles.css">
+    <link rel="stylesheet" href="/stylesheets/unsemantic-grid-responsive-no-ie7.css">
 
+
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1"/>
+  </head>
+  <body>
+    <header class="header">
+      <nav class="header-inner">
+        <div class="header-shadow"></div>
+        <a class="header-nav-item" href="/"><p style="font-weight: bold; font-size: 25px;">ED.</p></a>
+        <a class="header-nav-item" href="/projects">Projects</a>
+        <a class="header-nav-item" href="/posts">Posts</a>
+        <div class="header-nav-item btn-toggle" style="margin-left: auto;">
+          <img class="theme-icon" src="/assets/sun.svg" style="margin: 0 auto; display: block; height: 20px; width:20px;" alt="theme"/>
+        </div>
+      </nav>
+    </header>
+
+    <div class="grid-container">
+      <h1 class="grid-80 mobile-grid-80" style="font-size: 36px; padding-bottom: 5px;">Privacy... It's important.</h1>
+      <p class="grid-100 mobile-grid-100" style="font-size: 16px;margin-bottom: 40px;">I don't like my data being collected so why would I collect yours. In all my apps I do not collect any personal data, however you may see ads which are provided by AdMob.</p>
+        
+    </div>
+ 
+
+    <footer class="footer">
+      <div class="footer-inner">
+        <a class="footer-item" href="mailto:euandeasapps@gmail.com">Contact</a>
+        <div class="footer-item" style="margin-left: auto;">
+          <a href="https://www.linkedin.com/in/euan-deas-6204b3193/"><img id="linkedinicon" src="/assets/linkedin.svg" style="margin: 0 auto; display: block; height: 20px; width:20px; padding-right: 20px;" alt="linkedin"/></a>
+          <a href="https://www.instagram.com/euandeas_dev"><img id="instaicon" src="/assets/instagram.svg" style="margin: 0 auto; display: block; height: 20px; width:20px; padding-right: 20px;" alt="instagram"/></a>
+          <a href="https://github.com/euandeas"><img id="githubicon" src="/assets/github.svg" style="margin: 0 auto; display: block; height: 20px; width:20px;" alt="github"/></a>
+        </div>
+      </div>
+      <div class="footer-inner" style="height: 20px; margin-bottom: 20px;">
+        <p class="footer-item" style="margin-left: auto; margin-right:auto; height: 20px; line-height: 20px; font-size: 12px;">© 2022 Euan Deas. All Rights Reserved.</p>
+      </div>
+    </footer>
+  </body>
+  <script src="/scripts/theme.js"></script> 
+</html>
