--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="grid-100 mobile-grid-100" style="display: inline-block; margin-bottom: 30px;">
           <p class="language-bubble" style="font-size: 16px;">C#</p>
           <p class="language-bubble" style="font-size: 16px;">Python</p>
-          <p class="language-bubble" style="font-size: 16px;">Xamarin Android</p>
+          <p class="language-bubble" style="font-size: 16px;">Android for .Net 6 (prev. Xamarin Android)</p>
           <p class="language-bubble" style="font-size: 16px;">SQL</p>
           <p class="language-bubble" style="font-size: 16px;">C</p>
           <p class="language-bubble" style="font-size: 16px;">Java</p>
