--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1"/>
+    <script type="text/javascript" src="https://cdnjs.buymeacoffee.com/1.0.0/button.prod.min.js" data-name="bmc-button" data-slug="euandeas" data-color="#FFDD00" data-emoji="💲" data-font="Inter" data-text="Support Me!" data-outline-color="#000000" data-font-color="#000000" data-coffee-color="#ffffff"></script>
   </head>
   <body>
     <header class="header">
