--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         <a class="header-nav-item" href="/"><p style="font-weight: bold; font-size: 25px;">ED.</p></a>
         <a class="header-nav-item" href="projects">Projects</a>
         <a class="header-nav-item" href="posts">Posts</a>
-        <div class="header-nav-item btn-toggle" style="margin-left: auto;">
-          <script type="text/javascript" style="padding: 10px;" src="https://cdnjs.buymeacoffee.com/1.0.0/button.prod.min.js" data-name="bmc-button" data-slug="euandeas" data-color="#456685" data-emoji="💲"  data-font="Poppins" data-text="Support Me!" data-outline-color="#ffffff" data-font-color="#ffffff" data-coffee-color="#FFDD00" ></script>          
+        <div class="header-nav-item" style="margin-left: auto;">
+          <script type="text/javascript" src="https://cdnjs.buymeacoffee.com/1.0.0/button.prod.min.js" data-name="bmc-button" data-slug="euandeas" data-color="#456685" data-emoji="💲"  data-font="Poppins" data-text="Support Me!" data-outline-color="#ffffff" data-font-color="#ffffff" data-coffee-color="#FFDD00" ></script>          
         </div>
         <div class="header-nav-item btn-toggle" style="">
           <img class="theme-icon" src="assets/sun.svg" style="margin: 0 auto; display: block; height: 20px; width:20px;" alt="theme"/>
