--- a/index.html
+++ b/index.html
@@ -18,9 +18,7 @@
         <a class="header-nav-item" href="/"><p style="font-weight: bold; font-size: 25px;">ED.</p></a>
         <a class="header-nav-item" href="projects">Projects</a>
         <a class="header-nav-item" href="posts">Posts</a>
-        <div class="header-nav-item" style="margin-left: auto;">
-          <a class="header-nav-item" href="https://www.buymeacoffee.com/euandeas">Support Me!</a>
-        </div>
+        <a class="header-nav-item" style="margin-left: auto;" href="https://www.buymeacoffee.com/euandeas">Support Me!</a>
         <div class="header-nav-item btn-toggle">
           <img class="theme-icon" src="assets/sun.svg" style="margin: 0 auto; display: block; height: 20px; width:20px;" alt="theme"/>
         </div>
