--- a/projects/rowerstuff.html
+++ b/projects/rowerstuff.html
@@ -4,7 +4,7 @@
     <title>Euan Deas | Software Dev. Portfolio</title>
     <meta name="description" content="The software development portfolio site for Euan Deas a Computer Science Msci student, based in Nottingham & Reading, UK."/>
     
-    <link rel="icon" href="../assets/logo.png">
+    <link rel="icon" href="../assets/logowb.png">
     <link rel="stylesheet" href="../stylesheets/styles.css">
     <link rel="stylesheet" href="../stylesheets/unsemantic-grid-responsive-no-ie7.css">
     <link rel="stylesheet" href="../stylesheets/flickity.min.css" media="screen">
@@ -17,7 +17,7 @@
     <header class="header">
       <nav class="header-inner">
         <div class="header-shadow"></div>
-        <a class="header-nav-item" href="/"><p style="font-weight: bold; font-size: 25px;">ED.</p></a>
+        <a class="header-nav-item" href="/"><img src="../assets/logocb.png" style="height: 20px; width:20px;"/></a>
         <a class="header-nav-item" href="../projects">Projects</a>
         <a class="header-nav-item" href="../posts">Posts</a>
         <a class="header-nav-item" style="margin-left: auto;" href="https://www.buymeacoffee.com/euandeas">Support Me!</a>
