--- a/posts.html
+++ b/posts.html
@@ -6,7 +6,7 @@
     <title>Euan Deas | Software Dev. Portfolio</title>
     <meta name="description" content="The software development portfolio site for Euan Deas a Computer Science Msci student, based in Nottingham & Reading, UK."/>
     
-    <link rel="icon" href="../assets/logo.png">
+    <link rel="icon" href="../assets/logowb.png">
     <link rel="stylesheet" href="../stylesheets/styles.css">
     <link rel="stylesheet" href="../stylesheets/unsemantic-grid-responsive-no-ie7.css">
 
