Added logo to headers

--- a/404.html
+++ b/404.html
@@ -16,7 +16,7 @@
     <header class="header">
       <nav class="header-inner">
         <div class="header-shadow"></div>
-        <a class="header-nav-item" href="/"><p style="font-weight: bold; font-size: 25px;">ED.</p></a>
+        <a class="header-nav-item" href="/"><img id="logo" src="/assets/logocb.png" style="height: 55px; width:55px;"/></a>
         <a class="header-nav-item" href="/projects">Projects</a>
         <a class="header-nav-item" href="/posts">Posts</a>
         <a class="header-nav-item" style="margin-left: auto;" href="https://www.buymeacoffee.com/euandeas">Support Me!</a>
