--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <header class="header">
-      <nav class="header-inner">
+      <nav class="header-inner wide">
         <div class="header-shadow"></div>
         <a class="header-nav-item" href="/"><img id="logo" src="/assets/logocb.png" style="height: 55px; width:55px;"/></a>
         <a class="header-nav-item" href="projects">Projects</a>
@@ -23,7 +23,23 @@
           <img class="theme-icon" src="assets/sun.svg" style="margin: 0 auto; display: block; height: 20px; width:20px;" alt="theme"/>
         </div>
       </nav>
+      <nav class="header-inner thin">
+        <div class="header-shadow"></div>
+        <a class="header-nav-item" href="/"><img id="logo" src="/assets/logocb.png" style="height: 55px; width:55px;"/></a>
+        <div class="header-nav-item btn-toggle" style="margin-left: auto;">
+          <img class="theme-icon" src="assets/sun.svg" style="margin: 0 auto; display: block; height: 20px; width:20px;" alt="theme"/>
+        </div>
+        <div class="header-nav-item">
+          <img class="menu-icon" id="menuicon" src="assets/menu.svg" style="margin: 0 auto; display: block; height: 20px; width:20px;" alt="menu"/>
+        </div>
+      </nav>
     </header>
+
+    <div class="dropdown-content">
+      <a href="#">Link 1</a>
+      <a href="#">Link 2</a>
+      <a href="#">Link 3</a>
+    </div>
 
     <div class="grid-container">
       <h1 class="grid-80 mobile-grid-80" style="font-size: 36px; padding-bottom: 5px;">Euan Deas</h1>
