--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <nav class="header-inner thin">
         <div class="header-shadow"></div>
         <a class="header-nav-item" href="/"><img id="logo2" src="/assets/logocb.png" style="height: 55px; width:55px;"/></a>
-        <div class="header-nav-item btn-toggle" style="margin-left: auto;">
+        <div class="header-nav-item btn-toggle2" style="margin-left: auto;">
           <img class="theme-icon2" src="assets/sun.svg" style="margin: 0 auto; display: block; height: 20px; width:20px;" alt="theme"/>
         </div>
         <div class="header-nav-item">
