--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
         <div class="header-nav-item btn-toggle2" style="margin-left: auto;">
           <img class="theme-icon2" src="assets/sun.svg" style="margin: 0 auto; display: block; height: 20px; width:20px;" alt="theme"/>
         </div>
-        <div class="header-nav-item">
-          <img class="menu-icon" id="menuicon" src="assets/menu.svg" style="margin: 0 auto; display: block; height: 20px; width:20px;" alt="menu"/>
+        <div class="header-nav-item menu-toggle">
+          <img class="menu-icon" src="assets/menu.svg" style="margin: 0 auto; display: block; height: 20px; width:20px;" alt="menu"/>
         </div>
       </nav>
     </header>
