--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1"/>
   </head>
-  <body>
+  <body id="body">
     <header class="header">
       <nav class="header-inner wide">
         <div class="header-shadow"></div>
